// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Level component should concat classname in props with Bulma classname 1`] = `
<DocumentFragment>
  <div
    class="level other-class this-is-a-test"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Level component should have level classname 1`] = `
<DocumentFragment>
  <div
    class="level"
  >
    <div
      class="level-item"
    >
      Item 1
    </div>
    <div
      class="level-item"
    >
      Item 2
    </div>
    <div
      class="level-item"
    >
      Item 3
    </div>
  </div>
</DocumentFragment>
`;

exports[`Level component should render Levels with right and left side 1`] = `
<DocumentFragment>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <div
        class="level-item"
      >
        Item 1
      </div>
      <div
        class="level-item"
      >
        Item 2
      </div>
    </div>
    <div
      class="level-right"
    >
      <div
        class="level-item"
      >
        Item 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Level component should use inline styles 1`] = `
<DocumentFragment>
  <div
    class="level"
    style="height: 250px;"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;
